# Nox

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/clipboard/: clipboardhistory.cpp  clipboardhistory.h
core/files/: fileindex.cpp  fileindex.h
core/hotkey/: globalshortcut.cpp  globalshortcut.h
core/launcher/: applicationindex.cpp  applicationindex.h
core/plugin/: pluginmanager.cpp  pluginmanager.h  searchplugin.h
core/search/: fuzzymatcher.cpp  fuzzymatcher.h  searchcontroller.cpp  searchcontroller.h  searchmodel.cpp  searchmodel.h  searchresult.h  themeiconprovider.cpp  themeiconprovider.h
packaging/: NOX.desktop.in  io.github.brsrk94.Nox.appdata.xml
plugins/calculator/: calculatorplugin.cpp  calculatorplugin.h
plugins/system/: systemplugin.cpp  systemplugin.h
scripts/: build_appimage.sh  build_deb.sh  setup_gnome_shortcut.sh
tools/: appimagetool  linuxdeploy-plugin-qt
ui/qml/: Main.qml  PreviewPanel.qml  ResultItem.qml  ResultsList.qml  SearchBar.qml
